[project]
name = "imle_policy"
version = "0.1.0"
description = "IMLE Policy"
authors = [
    { name = "Krishan Rana", email = "ranak@qut.edu.au" },
    { name = "Robert Lee", email = "rlee3359@gmail.com" },
    { name = "David Pershouse", email = "d3.pershouse@hdr.qut.edu.au" },
]
readme = "README.md"
requires-python = ">=3.10, <3.13"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]


[tool.pixi.pypi-dependencies]
torch = { version = ">=2.9.0, <2.10.0", index = "https://download.pytorch.org/whl/cu130" }
torchvision = { index = "https://download.pytorch.org/whl/cu130" }
imle_policy = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
eval = {features = ["eval"], solve-group = "default"}
kitchen = {features = ["kitchen", "eval"], solve-group = "default"}
pusht = {features = ["pusht", "eval"], solve-group = "default"}
robomimic = {features = ["robomimic", "eval"], solve-group = "default"}
ur3 = {features = ["ur3", "eval"], solve-group = "default"}

[tool.pixi.feature.eval.dependencies]
ffmpeg = ">=5.0.0,<8"

[tool.pixi.feature.kitchen.pypi-dependencies]
d4rl = { git = "git+https://github.com/Farama-Foundation/d4rl", branch="master" }
mujoco = "<=3.1.6"

[tool.pixi.feature.pusht.pypi-dependencies]
pygame = ">=2.6.1"
shapely = ">=2.0.6"
pymunk = ">=6.6.0,<7"
scikit-image = ">=0.25.0"

[tool.pixi.feature.robomimic.pypi-dependencies]
robosuite = { git = "git+https://github.com/ARISE-Initiative/robosuite", tag="v1.4.1" } 

[tool.pixi.feature.ur3.pypi-dependencies]
gym_custom = { path = "./imle_policy/envs/ur3" }
mujoco = "<=3.1.6"
imageio = { version = ">=2.34.0", extras = ["ffmpeg"] }

[tool.pixi.feature.eval.pypi-dependencies]
numpy = "*"
diffusers = ">=0.27.2"
h5py = ">=3.10.0"
wandb = ">=0.16.3"
zarr = ">=2.17.0"
matplotlib = ">=3.10.0"
tdqm = "*"
gym = ">=0.23.1"
opencv-python-headless = ">=4.9.0"
av = ">=14.2.0"


# dm_control = "<=1.0.20"
# cython = "<=3"
# packaging = ">=24.2"
# pynput = ">=1.7.7"
# pyzmq = ">=26.2.1"
# termcolor = ">=2.4.0"
# jsonlines = ">=4.0.0"
# numba = ">=0.59.0"
# flask = ">=3.0.3"
# gdown = ">=5.1.0"
# gymnasium = "==0.29.1"
# huggingface-hub = ">=0.27.1"
# cmake = ">=3.29.0.1"
# datasets = ">=2.19.0"
# deepdiff = ">=7.0.1"
# omegaconf = ">=2.3.0"
#
# draccus = "==0.10.0"